fix z-index issue & change copyright link color

--- a/style.css
+++ b/style.css
@@ -126,6 +126,8 @@ body {
   border-top: 3px solid #e01212;
   box-shadow: 0 2px 6px rgb(0 0 0 / 10%);
   width: 120px;
+  z-index: 10;
+  background-color: #f5f6f9;
 }
 
 .sub-menu::before {
@@ -318,10 +320,11 @@ body {
 .sub-menu-2 {
   position: absolute;
   display: none;
+  background-color: #f5f6f9;
   border-top: 3px solid #e01212;
   box-shadow: 0 2px 6px rgb(0 0 0 / 10%);
   width: auto;
-  z-index: 9999;
+  z-index: 10;
 }
 
 .menu-list li:hover .sub-menu-2 {
@@ -1105,7 +1108,8 @@ body {
 }
 
 .copyright p a {
-  color: #ef2f41;
+  color: #f7c6c6;
+  text-decoration: underline;
 }
 
 .copyright p:nth-child(2) a {
